--- a/config.json
+++ b/config.json
@@ -31,7 +31,7 @@
         "listenEvents": true,
         "pauseLog": true,
         "logLevel": "error",
-        "selfListen": false,
+        "selfListen": true,
         "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.72 Safari/537.36"
     },
     "version": "1.2.14",
@@ -124,5 +124,8 @@
     },
     "sim": {
         "APIKEY": "MEWbWFjaGFtYW5oO21hY2hhbWFuaEBnbWFpbC5jb20"
+    },
+    "auto": {
+        "enable": true
     }
 }
